Added link to YODL url. Jeremy.

--- a/docs/manpages/make_smbcodepage.1
+++ b/docs/manpages/make_smbcodepage.1
@@ -134,8 +134,10 @@ Linux kernel is developed\&.
 .PP 
 The original Samba man pages were written by Karl Auer\&. The man page
 sources were converted to YODL format (another excellent piece of Open
-Source software) and updated for the Samba2\&.0 release by Jeremy
-Allison, \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
+Source software, available at
+\fBftp://ftp\&.icce\&.rug\&.nl/pub/unix/\fP)
+and updated for the Samba2\&.0 release by Jeremy Allison\&.
+\fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
 .PP 
 See \fBsamba (7)\fP to find out how to get a full
 list of contributors and details on how to submit bug reports,
