--- a/docs/manpages/smb.conf.5
+++ b/docs/manpages/smb.conf.5
@@ -4060,7 +4060,7 @@ doesn\'t suffer from:
 .IP 
 .IP 
 .IP o 
-You may list several password servers in the \fB"password server"
+You may list several password servers in the \fB"password server"\fP
 parameter, however if an \fBsmbd\fP makes a connection
 to a password server, and then the password server fails, no more
 users will be able to be authenticated from this
@@ -4164,7 +4164,7 @@ time they log in\&. Maybe a message of the day? Here is an example:
  
 
 .IP 
-Of course, this could get annoying after a while :-\fP
+Of course, this could get annoying after a while :-)
 .IP 
 See also \fBpostexec\fP\&.
 .IP 
@@ -6237,5 +6237,11 @@ Linux kernel is developed\&.
 .IP 
 The original Samba man pages were written by Karl Auer\&. The man page
 sources were converted to YODL format (another excellent piece of Open
-Source software) and updated for the Samba2\&.0 release by Jeremy
-Allison, \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
+Source software, available at
+\fBftp://ftp\&.icce\&.rug\&.nl/pub/unix/\fP)
+and updated for the Samba2\&.0 release by Jeremy Allison\&.
+\fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
+.IP 
+See \fBsamba (7)\fP to find out how to get a full
+list of contributors and details on how to submit bug reports,
+comments etc\&.
