--- a/docs/manpages/samba.7
+++ b/docs/manpages/samba.7
@@ -154,5 +154,7 @@ Linux kernel is developed\&.
 .PP 
 The original Samba man pages were written by Karl Auer\&. The man page
 sources were converted to YODL format (another excellent piece of Open
-Source software) and updated for the Samba2\&.0 release by Jeremy
-Allison, \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
+Source software, available at
+\fBftp://ftp\&.icce\&.rug\&.nl/pub/unix/\fP)
+and updated for the Samba2\&.0 release by Jeremy Allison\&.
+\fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
