--- a/docs/manpages/smbtar.1
+++ b/docs/manpages/smbtar.1
@@ -114,8 +114,10 @@ this man page\&. The \fBsmbtar\fP script was heavily rewritten and
 improved by Martin Kraemer \fIMartin\&.Kraemer@mch\&.sni\&.de\fP\&. Many
 thanks to everyone who suggested extensions, improvements, bug fixes,
 etc\&. The man page sources were converted to YODL format (another
-excellent piece of Open Source software) and updated for the Samba2\&.0
-release by Jeremy Allison, \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
+excellent piece of Open Source software available at
+\fBftp://ftp\&.icce\&.rug\&.nl/pub/unix/\fP)
+and updated for the Samba2\&.0 release by Jeremy Allison,
+\fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
 .PP 
 See \fBsamba (7)\fP to find out how to get a full
 list of contributors and details on how to submit bug reports,
