Commiting tt fix.

--- a/docs/manpages/smb.conf.5
+++ b/docs/manpages/smb.conf.5
@@ -3115,7 +3115,7 @@ If a Samba server is a member of an Windows NT Domain (see the
 periodically a running \fBsmbd\fP process will try and
 change the \fBMACHINE ACCOUNT PASWORD\fP stored in the file called
 \f(CW<Domain>\&.<Machine>\&.mac\fP where \f(CW<Domain>\fP is the name of the
-Domain we are a member of and tt<Machine> is the primary
+Domain we are a member of and \f(CW<Machine>\fP is the primary
 \fB"NetBIOS name"\fP of the machine
 \fBsmbd\fP is running on\&. This parameter specifies how
 often this password will be changed, in seconds\&. The default is one
